added cura profiles, mainsail config examples

--- a/klipper/config.cfg
+++ b/klipper/config.cfg
@@ -1,22 +1,9 @@
 [include mainsail.cfg]
-
-[mcu]
-serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
-restart_method: command
-
-[printer]
-kinematics: corexz
-max_velocity: 200
-max_accel: 2000
-max_accel_to_decel:1000
-max_z_velocity: 50
-max_z_accel: 1000
-square_corner_velocity: 5
-
-[input_shaper]
-shaper_freq_x: 30.07
-shaper_freq_y: 47.05
-shaper_type: ei
+# This file contains pin mappings for the Voxelab Aquila with
+# N32G452 on the 1.0.1 mainboard. To use this config, during
+# "make menuconfig" select the stm32f103, 28KB boot, serial
+# PA9/PA10 and N32G45x option.
+# See docs/Config_Reference.md for a description of parameters.
 
 [stepper_x]
 step_pin: PC2
@@ -58,14 +45,13 @@ position_max: 230
 position_min: -1.0
 
 [extruder]
-pressure_advance: 0.155
 max_extrude_only_distance: 150.0
 max_extrude_cross_section: 30
 step_pin: PB4
 dir_pin: PB3
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 3.371657856
+rotation_distance: 3.364928
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PA1
@@ -78,9 +64,6 @@ sensor_pin: PC5
 min_temp: 0
 max_temp: 250
 
-[fan]
-pin: PA0
-
 [heater_bed]
 heater_pin: PA2
 sensor_type: EPCOS 100K B57560G104F
@@ -92,6 +75,34 @@ sensor_pin: PC4
 min_temp: 0
 max_temp: 130
 
+[fan]
+pin: PA0
+
+[mcu]
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+restart_method: command
+
+[printer]
+kinematics: corexz
+max_velocity: 200
+max_accel: 2000
+max_accel_to_decel: 1000
+max_z_velocity: 50
+max_z_accel: 1000
+square_corner_velocity: 4.0
+
+[bltouch]
+sensor_pin: ^PB1
+control_pin: PB0
+x_offset: 0
+y_offset: -25
+#z_offset: 3
+pin_move_time: 0.4
+speed: 10
+
+
+#mesh_min: -5,30
+#mesh_max: 175, 225
 [bed_mesh]
 speed: 80
 horizontal_move_z: 5
@@ -109,14 +120,6 @@ speed: 50
 z_hop: 10
 z_hop_speed: 5
 
-[bltouch]
-sensor_pin: ^PB1
-control_pin: PB0
-x_offset: 0
-y_offset: -25
-#z_offset: 3
-pin_move_time: 0.4
-speed: 10
 
 ######################################################################
 # MACROS
@@ -227,7 +230,7 @@ gcode:
     # Absolute positionning
     G90
     # Present print
-    G1 X215 Y225
+    G1 X210 Y225
     # Disable steppers
     M84 
 # --------------------------------------------------------------------
@@ -248,7 +251,7 @@ gcode:
 #*# pid_kd = 1001.709
 #*#
 #*# [bltouch]
-#*# z_offset = 0.600
+#*# z_offset = 0.900
 #*#
 #*# [skew_correction my_skew_profile]
 #*# xy_skew = 0.0
@@ -277,18 +280,18 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.175000, 0.087500, 0.112500, 0.112500, 0.137500
-#*# 	0.137500, 0.075000, 0.075000, 0.087500, 0.125000
-#*# 	0.075000, 0.025000, 0.025000, 0.062500, 0.075000
-#*# 	0.087500, 0.012500, 0.012500, 0.025000, 0.062500
-#*# 	0.062500, -0.012500, -0.012500, 0.037500, 0.112500
+#*# 	0.137500, 0.087500, 0.087500, 0.062500, 0.125000
+#*# 	0.112500, 0.050000, 0.050000, 0.037500, 0.100000
+#*# 	0.075000, 0.025000, 0.037500, 0.025000, 0.087500
+#*# 	0.037500, -0.000000, 0.012500, 0.025000, 0.112500
+#*# 	0.037500, 0.012500, 0.012500, 0.037500, 0.175000
 #*# tension = 0.2
-#*# min_x = 0.0
+#*# min_x = 32.0
 #*# algo = bicubic
 #*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 10.0
+#*# min_y = 4.0
 #*# x_count = 5
-#*# max_y = 200.0
+#*# max_y = 199.0
 #*# mesh_x_pps = 2
-#*# max_x = 215.0
+#*# max_x = 212.0
