--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -86,8 +86,8 @@ restart_method: command
 kinematics: corexz
 max_velocity: 200
 max_accel: 2000
-max_accel_to_decel: 1000
 max_z_velocity: 50
+minimum_cruise_ratio: 0.5
 max_z_accel: 1000
 square_corner_velocity: 4.0
 
@@ -251,7 +251,7 @@ gcode:
 #*# pid_kd = 1001.709
 #*#
 #*# [bltouch]
-#*# z_offset = 0.900
+#*# z_offset = 0.755
 #*#
 #*# [skew_correction my_skew_profile]
 #*# xy_skew = 0.0
@@ -280,18 +280,18 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.137500, 0.087500, 0.087500, 0.062500, 0.125000
-#*# 	0.112500, 0.050000, 0.050000, 0.037500, 0.100000
-#*# 	0.075000, 0.025000, 0.037500, 0.025000, 0.087500
-#*# 	0.037500, -0.000000, 0.012500, 0.025000, 0.112500
-#*# 	0.037500, 0.012500, 0.012500, 0.037500, 0.175000
+#*# 	0.100000, -0.012500, -0.012500, 0.012500, -0.000000
+#*# 	0.100000, 0.012500, -0.012500, 0.025000, 0.025000
+#*# 	0.062500, -0.025000, -0.025000, 0.012500, 0.025000
+#*# 	0.075000, -0.000000, -0.012500, 0.037500, 0.075000
+#*# 	0.025000, -0.037500, -0.025000, 0.050000, 0.112500
 #*# tension = 0.2
-#*# min_x = 32.0
+#*# min_x = 0.0
 #*# algo = bicubic
 #*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 4.0
+#*# min_y = 10.0
 #*# x_count = 5
-#*# max_y = 199.0
+#*# max_y = 200.0
 #*# mesh_x_pps = 2
-#*# max_x = 212.0
+#*# max_x = 215.0
